fix AlignmentViewer Fullscreen mode

--- a/app/assets/styles/_jobview.scss
+++ b/app/assets/styles/_jobview.scss
@@ -298,6 +298,7 @@
 #bioJSContainer,
 #rootDiv {
   overflow-x: auto;
+  width: 100%;
 }
 
 .biojs_msa_labels {
